--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>SORTING VISUALIZER</h1>
       <nav>
         <div class="array-inputs">
-          <p>Size of the array:</p>
+          <p>Array Size:</p>
           <input
             id="a_size"
             type="range"
@@ -20,7 +20,7 @@
             step="1"
             value="20"
           />
-          <p>Speed of the algorithm:</p>
+          <p>Speed of Sorting:</p>
           <input id="a_speed" type="range" min="1" max="5" step="1" value="4" />
           <button id="a_generate">Generate New Array!</button>
         </div>
